<resources>
    <string name="app_name">Süt Topla</string>
    <string name="connection_str">Bağlantı Kuruluyor</string>
    <string name="apprvbutton_str">Onayla</string>
    <string name="saveid_str">Hatırla</string>
    <string name="autolog_str">Otomatik giriş yap</string>
    <string name="title_activity_missionselect">Görev Seçimi</string>
    <string name="title_activity_login_screen">Giriş Ekranı</string>
    <string name="choosemission_str">Görev Seç: </string>
    <string name="configfilename_str">config.txt</string>
    <string name="error_file_str">Dosya Bozuk</string>
    <string name="connection_err_str">Erişim Sağlanamadı.Yenileyin."</string>
    <string name="connected_str">Bağlandı</string>
    <string name="id_match_error">Böyle bir id bulunamadı. Tekrar Deneyin.</string>
    <string name="autolog_making_str">Otomatik giriş yapıldı. Veriler Çekiliyor.</string>
    <string name="log_making_str">Giriş yapıldı. Veriler Çekiliyor.</string>
    <string name="back_err_str">Buradan geri gidemezsiniz.</string>
    <string name="refresh_button_descrip">Yenileme Butonu</string>
    <string name="to_exit_str">Çıkmak için bir kez daha basın.</string>
    <string name="idhint_str">0123456..</string>
    <string name="splash_back_str">Arkaplan</string>
    <string name="logo_zoomout_str">Küçülen logo</string>
    <string name="not_submit_str">Göndermeden çıkmak için tekrar geri basın.</string>
    <string name="background_main">Arkaplan görseli</string>
    <string name="choose_str">Seç</string>
    <string name="push_queue_str">Göndermeleri Tamamla</string>
    <string name="change_id_str">ID Değiştir</string>
    <string name="previous_submissions_str">Geçmiş Kayıtlar</string>
    <string name="truck_img">Tır görseli</string>
    <string name="amount_str">Miktar(litre):</string>
    <string name="milk_type_sty">Süt Tipi:</string>
    <string name="number_str">12345</string>
    <string name="temp_str">Sıcaklık:</string>
    <string name="alcohol_str">Alkol Testi:</string>
    <string name="deg46_str">4-6 Derece</string>
    <string name="more6_str">6 Derece Üstü</string>
    <string name="alcohol_e_str">Kesiyor</string>
    <string name="alcohol_ne_str">Kesmiyor</string>
    <string name="antibiotic_str">Antibiyotik Testi:</string>
    <string name="antibiotic_n_str">Negatif / Yok</string>
    <string name="antibiotic_e_str">Pozitif / Var</string>
    <string name="refrac_str">Refractometre Değeri:</string>
    <string name="above95_str">9,5 Derece Üstü</string>
    <string name="below95_str">9,5 Derece Altı</string>
    <string name="comment_str">Notunuzu buraya giriniz.(500 karakter)</string>
    <string name="leave_milk_str">Sütü Almadım.</string>
    <string name="all_milk_str">Bütün sütü aldım.</string>
    <string name="some_milk_str">Başka süt ekleyeceğim.</string>
    <string name="other_reason_str">Diğer Sebepler(Not Yazdım)</string>
    <string name="bad_milk_str">Bozuk Ürün</string>
    <string name="yes_str">Evet, Onaylıyorum.</string>
    <string name="isClear1_str">Soğutma tankı temiz mi?</string>
    <string name="isClear2_str">Pompa ve hortum temiz mi?</string>
    <string name="isClear3_str">Baskül temiz mi?</string>
    <string name="isClear4_str">Merkez temiz mi?</string>
    <string name="duty_id_str">Görev id:</string>
    <string name="already_done_str">Zaten Yapılmış Görev Seçtiniz.</string>
    <string name="duty_id_extra_str">duty_id</string>
    <string name="user_id_extra_str">user_id</string>
    <string name="tank1_str">Tank 1</string>
    <string name="tank2_str">Tank 2</string>
    <string name="tank3_str">Tank 3</string>
    <string name="tank4_str">Tank 4</string>
    <string name="tank5_str">Tank 5</string>
    <string name="antibiotic_err">Antibiyotikli bir ürünü alamazsınız.</string>
    <string name="empty_area_err_str">Boş alan bıraktınız. Lütfen tamamlayın.</string>
    <string name="tank_limit_exceeded_str">Tank dolu.</string>
    <string name="milk_not_comp_str">Sütler uyumlu değil.</string>
    <string name="some_milk_sent_str">Sütün bir kısmını gönderdiniz. Şimdi Ek gönderme yapmalısınız.</string>
    <string name="understood_str">ANLADIM!</string>
    <string name="title_activity_formscreen">Form Ekranı</string>
</resources>
