<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".FormScreen">


    <ImageView
        android:id="@+id/main_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_main"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mn_back" />

    <LinearLayout
        android:id="@+id/truck_milk_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/truck_lay"
            android:layout_width="348dp"
            android:layout_height="115dp">

            <ImageView
                android:id="@+id/truck_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/truck_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/sutas_truck" />

            <CheckBox
                android:id="@+id/tank1_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:background="@android:drawable/checkbox_off_background"
                app:layout_constraintStart_toEndOf="@+id/tank2_chk"
                app:layout_constraintTop_toTopOf="@+id/truck_img" />

            <CheckBox
                android:id="@+id/tank2_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="28dp"
                android:background="@android:drawable/checkbox_off_background"
                app:layout_constraintStart_toEndOf="@+id/tank3_chk"
                app:layout_constraintTop_toTopOf="@+id/truck_img" />

            <CheckBox
                android:id="@+id/tank3_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="28dp"
                android:background="@android:drawable/checkbox_off_background"
                app:layout_constraintStart_toEndOf="@+id/tank4_chk"
                app:layout_constraintTop_toTopOf="@+id/truck_img" />

            <CheckBox
                android:id="@+id/tank4_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="28dp"
                android:background="@android:drawable/checkbox_off_background"
                app:layout_constraintStart_toEndOf="@+id/tank5_chk"
                app:layout_constraintTop_toTopOf="@+id/truck_img" />

            <CheckBox
                android:id="@+id/tank5_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="28dp"
                android:background="@android:drawable/checkbox_off_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/truck_img" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/milktype_liter_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/milk_type_tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/milk_type_sty"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <Spinner
                android:id="@+id/milk_type_spin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/liter_tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount_str"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <EditText
                android:id="@+id/liter_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/number_str"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body_lay"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/truck_milk_lay"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/tests_lay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temp_str"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                <TextView
                    android:id="@+id/alcohol_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alcohol_str"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                <TextView
                    android:id="@+id/antibiotic_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/antibiotic_str"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                <TextView
                    android:id="@+id/refrac_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/refrac_str"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radiotemp_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/deg46_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/deg46_str" />

                    <RadioButton
                        android:id="@+id/more6_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/more6_str" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioalcohol_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/alcohol_ne_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/alcohol_ne_str" />

                    <RadioButton
                        android:id="@+id/alcohol_e_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/alcohol_e_str" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/antibiotic_radio_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/antibiotic_ne_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/antibiotic_n_str" />

                    <RadioButton
                        android:id="@+id/antibiotic_e_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/antibiotic_e_str" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/refrac_radio_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/below95_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/below95_str" />

                    <RadioButton
                        android:id="@+id/above95_radio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/above95_str" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/temp_spin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <Spinner
                    android:id="@+id/alcohol_type_spin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <Spinner
                    android:id="@+id/refrac_temp_spin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/comment_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:hint="@string/comment_str"
            android:inputType="textMultiLine"
            android:maxLength="500" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/apprvbutton_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/submit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/body_lay">

        <RadioGroup
            android:id="@+id/taken_amount_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/leave_milk_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/leave_milk_str" />

            <RadioButton
                android:id="@+id/all_milk_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/all_milk_str" />

            <RadioButton
                android:id="@+id/some_milk_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/some_milk_str" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/amount_detail_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:orientation="horizontal"
            android:visibility="invisible">

            <RadioButton
                android:id="@+id/other_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/other_reason_str" />

            <RadioButton
                android:id="@+id/bad_milk_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bad_milk_str" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
