<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/swipe"
    style="@style/with_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MissionSelectScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintHorizontal_bias="1">

        <ImageView
            android:id="@+id/main_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_main"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/mn_back"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:id="@+id/buttons_duty_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/changeid_btn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:text="@string/change_id_str" />

            <Button
                android:id="@+id/prevsubs_btn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@android:drawable/btn_default_small"
                android:text="@string/previous_submissions_str" />
        </LinearLayout>

        <TextView
            android:id="@+id/mission_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:drawable/editbox_background"
            android:text="@string/choosemission_str"
            android:textColor="@android:color/background_dark"
            android:textIsSelectable="false"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttons_duty_lay" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mission_label">

            <Spinner
                android:id="@+id/mission_spin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@android:drawable/spinner_background" />

            <Button
                android:id="@+id/go_duty_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@android:drawable/btn_default_small"
                android:text="@string/choose_str" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>